--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^29.5.0",
+        "@types/node": "^18.15.5",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
         "chroma-js": "^2.4.2",
         "clsx": "^1.2.1",
         "fast-average-color": "^9.3.0",
@@ -18,6 +22,7 @@
         "reset-css": "^5.0.1",
         "sass": "^1.58.3",
         "swiper": "^9.1.0",
+        "typescript": "^5.0.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -43,5 +48,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/swiper": "^6.0.0"
     }
 }
